# ultimate-pdf

./: .gitignore  Cargo.toml
apple-vision-image-text-extractor/: Cargo.toml  PLAN.md
apple-vision-image-text-extractor/src/: lib.rs  main.rs  types.rs  vision-swift-integration.rs
apple-vision-image-text-extractor/swift/: Package.swift
apple-vision-image-text-extractor/swift/.build/: build.db  release.yaml
apple-vision-image-text-extractor/swift/.build/arm64-apple-macosx/release/: plugin-tools-description.json  vision-ocr
apple-vision-image-text-extractor/swift/.build/arm64-apple-macosx/release/ModuleCache/11OUGNA4TX3HY/: AVFAudio-MFFJ6HCE9A7Z.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  AudioToolbox-3FX4B654ICQE2.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  Carbon-3FMY3B0T5SZYU.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreAudio-J9DSWC1670R6.pcm  CoreAudioTypes-11649WXSRCA0E.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreMIDI-1WOF0UOPGOCPX.pcm  CoreML-59H0IRBTCTIW.pcm  CoreMedia-SHYM2JB41P4U.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  MachO-20RPYVQSX341K.pcm  MediaToolbox-1P5YMSVDQUIJ6.pcm  Metal-1GCZV9N85NJOH.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm  Vision-15ADOFJRMBWUU.pcm  XPC-T0ZXCAST7PE3.pcm  _AvailabilityInternal-2YSBQADOLX02V.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_intrinsics-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  (+19 more)
apple-vision-image-text-extractor/swift/.build/arm64-apple-macosx/release/Modules/: vision_ocr.swiftdoc  vision_ocr.swiftmodule  vision_ocr.swiftsourceinfo
apple-vision-image-text-extractor/swift/.build/arm64-apple-macosx/release/vision-ocr.product/: Objects.LinkFileList
apple-vision-image-text-extractor/swift/.build/arm64-apple-macosx/release/vision_ocr.build/: output-file-map.json  sources  vision_ocr.d
apple-vision-image-text-extractor/swift/Sources/vision-ocr/: main.swift
apple-vision-image-text-extractor/tests/: integration.rs
books/processed/alan-watts/essentials/: extract.md
src/: cli.rs  lib.rs  main.rs  server.rs
updf-agent-cleanup/: Cargo.toml
updf-agent-cleanup/src/: lib.rs  main.rs
updf-agent-cleanup/tests/: integration.rs
updf-api/: Cargo.toml
updf-api/src/: lib.rs  main.rs
updf-cli/: Cargo.toml
updf-cli/src/: cli.rs  main.rs  pipeline.rs
updf-cli/tests/: cli.rs
updf-pdf-to-image-set/: Cargo.toml
updf-pdf-to-image-set/src/: convert.rs  directory.rs  ghostscript.rs  lib.rs  main.rs
updf-pdf-to-image-set/tests/: cli.rs
(+2 files in other folders)
